--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,15 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+flask = "*"
+flask-marshmallow = "*"
+flask-heroku = "*"
+flask-sqlalchemy = "*"
+gunicorn = "*"
+flask-cors = "*"
+psycopg2-binary = "*"
+marshmallow-sqlalchemy = "*"
+flask-bcrypt = "*"
 
 [requires]
 python_version = "3.8"
